# research_ocr_pipeline

./: .env.example  .gitignore  .mcp.json  README.md  RUN.md  config.py  jp.json  main.py  pyproject.toml  schema_changes.sql
.github/workflows/: ci.yml
dashboard/: app.py  auth.py  columns.aux  columns.fdb_latexmk  columns.fls  columns.out  columns.tex  data.py  mermaid_utils.py
dashboard/pages/: 1_Overview.py  2_Reports.py  3_Step_Results.py  4_Scout_Analysis.py  5_Model_Export.py  6_Report_Export.py
pipeline/: debug_logger.py  filename_parser.py  formatting.py  ingest.py  ocr.py  page_utils.py  scout.py  step_errors.py  token_utils.py  tracker.py
pipeline/ocr_providers/: base.py  local_glm.py  registry.py  zai_provider.py
pipeline/providers/: anthropic_provider.py  base.py  dashscope_provider.py  gemini_provider.py  moonshot.py  openai_provider.py  openrouter_provider.py  registry.py
prompts/: extract_model_name.txt
reports_full/: MANIFEST.txt  document_names.csv
reports_full/BlackRock_web/: BlackRock_20190131.xlsm  BlackRock_20200930.xlsm  Links.txt
steps/_example/: HOWTO.md  config.json  prompt.txt  schema.json
steps/_scout/: config.json  prompt.txt  schema.json
steps/_scout_page/: config.json  schema.json
steps/extract_model_assumptions/: config.json  prompt.txt  schema.json
tests/: conftest.py  test_cli.py  test_dashboard_data.py  test_filename_parser.py  test_formatting.py  test_ingest.py  test_mermaid_utils.py  test_ocr.py  test_page_utils.py  test_providers.py  test_scout.py  test_step_contracts.py  test_tracker.py
(+22 files in other folders)
